<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bdev.burrows.vehiclediagnostics.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:weightSum="8">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:fontFamily="@font/faster_one"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dash"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/ref"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/refreshRates"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:background="@android:color/background_light"
                android:dropDownWidth="match_parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/iter"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/iterations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight=".6"
                android:background="@android:color/background_light"
                android:dropDownWidth="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:background="@android:color/background_dark"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <com.github.anastr.speedviewlib.PointerSpeedometer
                android:id="@+id/speedom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:sv_backgroundCircleColor="#000000"
                app:sv_speedometerColor="#ffffff"
                app:sv_trembleDegree="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/rpm"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rpm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical|center_horizontal"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/throttle"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/throttle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical|center_horizontal"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:background="@android:color/background_dark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/fuel"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical|center_horizontal"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/volts"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/battery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:gravity="fill_vertical|center_horizontal"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:background="@android:color/background_dark"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="back"
                android:text="@string/back" />

        </LinearLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
