<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bdev.burrows.vehiclediagnostics.Diagnostics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:weightSum="8">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:background="@android:color/background_dark"
            android:fontFamily="@font/faster_one"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/diag"
            android:textColor="@android:color/background_light"
            android:textSize="45sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/engineLight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_dark"
                app:srcCompat="@drawable/engine" />

            <TextView
                android:id="@+id/dtcCount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/background_dark"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/noCodes"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="3.7"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"
            android:weightSum="1">

            <ListView
                android:id="@+id/troubleCodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="back"
                android:text="@string/back" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
